--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
 	<meta name="description" content="Wizardry Online の装備品データを検索・抽出するシステムです。また、簡単な装備の鍛錬シミュレート機能などもできます。">
 
 	<!-- scripts -->
-	<script src="features/cypress.retrieval.min.js?ver=2.1.8"></script>
+<!--
+	<script src="features/cypress.retrieval.min.js?ver=2.1.9"></script>
+-->
+	<script src="features/jquery.min.js"></script>
+	<script src="features/slidebars.min.js"></script>
+	<script src="features/ion.rangeSlider.min.js"></script>
+	<script src="features/colorbox.min.js"></script>
+	<script src="features/icheck.min.js"></script>
+	<script src="features/zeroclipboard.min.js"></script>
+	<script src="features/cypress.core.js"></script>
+	<script src="features/cypress.retrieval.js"></script>
 
 	<!-- styles -->
 	<link href="styles/cypress-retrieval.css" rel="stylesheet" type="text/css">
@@ -28,7 +38,7 @@
 		</div>
 
 		<div id="logo">
-			<img src="images/cypress-logo.png" alt="Cypress">
+			<img src="images/cypress-logo-d.png" alt="Cypress">
 		</div>
 
 		<div id="usage-button-box" class="control-box buttons">
@@ -104,6 +114,7 @@
 						</ul>
 						<h4>Changelog: 変更履歴</h4>
 						<ul>
+							<li>[2016-10-04] [v2.1.9] レベル 90 への対応</li>
 							<li>[2016-09-09] [v2.1.8] グレード 25 装備品への対応および付与許容値の表示変更 <a href="https://github.com/miramiku/Cypress/issues/103">#103</a></li>
 							<li>[2016-08-02] [v2.1.7] 銃の鍛錬データ追加</li>
 							<li>[2016-07-14] [v2.1.6] 装備データをコピーテキストを一部修正 <a href="https://github.com/miramiku/Cypress/issues/101">#101</a></li>
