--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 						</ul>
 						<h4>Resources: リソース情報</h4>
 						<ul>
+							<li>Document: <a href="https://miramiku.github.io/post/wizon/cypress/">Cypress Docs <img src="images/recollection.png" alt="recollection"></a></li>
 							<li>Ripository: <a href="https://github.com/miramiku/Cypress">miramiku/Cypress <span class="icon">&#xeab4;</span></a></li>
 							<li>Processed Database: <a href="https://dl.dropboxusercontent.com/u/6164477/cypress/equipments.json">equipment.json</a></li>
 							<li>Original Database: <a href="https://onedrive.live.com/redir?resid=716b8a626fb713c5!2372&amp;authkey=!AFFFx02yh8Ck5Ss&amp;ithint=file%2cxlsm">equipment.db.xlsm (Read only)</a></li>
@@ -119,17 +120,11 @@
 							<li>[2016-08-02] [v2.1.7] 銃の鍛錬データ追加</li>
 							<li>[2016-07-14] [v2.1.6] 装備データをコピーテキストを一部修正 <a href="https://github.com/miramiku/Cypress/issues/101">#101</a></li>
 							<li>[2016-07-08] [v2.1.5] 「衣服」という分類はそもそも存在しないため削除 <a href="https://github.com/miramiku/Cypress/issues/98">#98</a></li>
-							<li>[2016-04-19] [v2.1.4] 品質によるソートがうまくいかなかった不具合修正 <a href="https://github.com/miramiku/Cypress/issues/95">#95</a></li>
-							<li>[2016-03-29] [v2.1.3] グレード 24 装備品への対応および銃 +10 の装填性能データ適用</li>
-							<li>[2015-12-20] [v2.1.2] コピーボタンが動作しなかった不具合修正 <a href="https://github.com/miramiku/Cypress/issues/89">#89</a></li>
-							<li>[2015-12-16] [v2.1.1] グレード 23 装備品への対応およびレベル上限を 80 に引き上げ</li>
-							<li>[2015-11-06] [v2.1.0] 付与許容値の表示</li>
-							<li>[2015-11-06] [v2.0.0] エンチャントシステム実装によるデータベース改修</li>
-							<li>もっと見る：<a href="https://github.com/miramiku/Cypress/wiki/Changelog">Cypress wiki 変更履歴 <span class="icon">&#xeab4;</span></a></li>
+							<li>もっと見る：<a href="https://miramiku.github.io/post/wizon/cypress/change-log/">Cypress 変更履歴 <img src="images/recollection.png" alt="recollection"></a></li>
 						</ul>
 						<h4>Advanced usage: 右のパネルではできない詳細な検索</h4>
 						<ul>
-							<li><a href="https://github.com/miramiku/Cypress/wiki/Advanced-Usage">Cypress wiki 高度な検索 <span class="icon">&#xeab4;</span></a></li>
+							<li><a href="https://miramiku.github.io/post/wizon/cypress/advanced-usage/">高度な検索 <img src="images/recollection.png" alt="recollection"></a></li>
 						</ul>
 					</div><!-- #landing -->
 				</div><!-- .equipment-card-inner -->
