--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<!-- scripts -->
 <!--
-	<script src="features/cypress.retrieval.min.js?ver=2.1.9"></script>
+	<script src="features/cypress.retrieval.min.js?ver=2.1.10"></script>
 -->
 	<script src="features/jquery.min.js"></script>
 	<script src="features/slidebars.min.js"></script>
@@ -115,11 +115,11 @@
 						</ul>
 						<h4>Changelog: 変更履歴</h4>
 						<ul>
+							<li>[2016-10-13] [v2.1.10] 細かな修正 (Issues <a href="https://github.com/miramiku/Cypress/issues/110">#110</a>, <a href="https://github.com/miramiku/Cypress/issues/111">#111</a>)</li>
 							<li>[2016-10-04] [v2.1.9] レベル 90 への対応</li>
 							<li>[2016-09-09] [v2.1.8] グレード 25 装備品への対応および付与許容値の表示変更 <a href="https://github.com/miramiku/Cypress/issues/103">#103</a></li>
 							<li>[2016-08-02] [v2.1.7] 銃の鍛錬データ追加</li>
 							<li>[2016-07-14] [v2.1.6] 装備データをコピーテキストを一部修正 <a href="https://github.com/miramiku/Cypress/issues/101">#101</a></li>
-							<li>[2016-07-08] [v2.1.5] 「衣服」という分類はそもそも存在しないため削除 <a href="https://github.com/miramiku/Cypress/issues/98">#98</a></li>
 							<li>もっと見る：<a href="https://miramiku.github.io/post/wizon/cypress/change-log/">Cypress 変更履歴 <img src="images/recollection.png" alt="recollection"></a></li>
 						</ul>
 						<h4>Advanced usage: 右のパネルではできない詳細な検索</h4>
