--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="description" content="Wizardry Online の装備品データを検索・抽出するシステムです。また、簡単な装備の鍛錬シミュレート機能などもできます。">
 
 	<!-- scripts -->
-	<script src="features/cypress.retrieval.min.js?ver=2.1.12"></script>
+	<script src="features/cypress.retrieval.min.js?ver=2.1.13"></script>
 
 	<!-- styles -->
 	<link href="styles/cypress-retrieval.css" rel="stylesheet" type="text/css">
@@ -100,16 +100,16 @@
 						<ul>
 							<li>Document: <a href="https://miramiku.github.io/post/wizon/cypress/">Cypress Docs <img src="images/recollection.png" alt="recollection"></a></li>
 							<li>Ripository: <a href="https://github.com/miramiku/Cypress">miramiku/Cypress <span class="icon">&#xeab4;</span></a></li>
-							<li>Processed Database: <a href="https://dl.dropboxusercontent.com/u/6164477/cypress/equipments.json">equipment.json</a></li>
+							<li>Processed Database: <a href="features/equipments.json">equipment.json</a></li>
 							<li>Original Database: <a href="https://onedrive.live.com/redir?resid=716b8a626fb713c5!2372&amp;authkey=!AFFFx02yh8Ck5Ss&amp;ithint=file%2cxlsm">equipment.db.xlsm (Read only)</a></li>
 						</ul>
 						<h4>Changelog: 変更履歴</h4>
 						<ul>
+							<li>[2017-01-28] [v2.1.13] データベースの固定化</li>
 							<li>[2016-11-08] [v2.1.12] グレード 26 装備品への対応</li>
 							<li>[2016-10-28] [v2.1.11] Other 品質の装備が鍛錬できてしまう不具合を修正 <a href="https://github.com/miramiku/Cypress/issues/110">#112</a></li>
 							<li>[2016-10-13] [v2.1.10] 細かな修正 (Issues <a href="https://github.com/miramiku/Cypress/issues/110">#110</a>, <a href="https://github.com/miramiku/Cypress/issues/111">#111</a>)</li>
 							<li>[2016-10-04] [v2.1.9] レベル 90 への対応</li>
-							<li>[2016-09-09] [v2.1.8] グレード 25 装備品への対応および付与許容値の表示変更 <a href="https://github.com/miramiku/Cypress/issues/103">#103</a></li>
 							<li>もっと見る：<a href="https://miramiku.github.io/post/wizon/cypress/change-log/">Cypress 変更履歴 <img src="images/recollection.png" alt="recollection"></a></li>
 						</ul>
 						<h4>Advanced usage: 右のパネルではできない詳細な検索</h4>
